# optimistic-provide

./: .gitignore  .gitmodules  Makefile  README.md  cmd.go  cmd_provide.go  content.go  event.go  go.mod  go.sum  host.go  mat.go  measurement.go  package-lock.json  provider.go  requester.go  rpc.go  run.go  run_test.go  span.go  sqlboiler.toml  transport.go
analysis/: calc_probproc.py  lib_fmt.py  model_loader.py  model_measurement.py  model_peer_info.py  model_run.py  model_span.py  model_utils.py  num_distance.py  num_estimator.py  num_exponential.py  plot_agents.py  plot_discover_latencies.py  plot_distance.py  plot_distance_error.py  plot_hop_distribution.py  plot_hop_distribution_by_distance.py  plot_hop_distribution_by_distance_multi_plot.py  plot_hydra.py  plot_latencies.py  plot_process.py  plot_provide_delay.py  plot_provide_latencies.py  plot_xor_time.py  pyproject.toml  scratch.sql
jupyter/: Untitled.ipynb  data.csv  data2.logs  data3.logs  data4.logs  data5.logs  data6.logs  data6.logs.csv  github-logs.ipynb  heap  optprov.ipynb  optprov_1.ipynb  optprov_1000.ipynb  optprov_2.ipynb  optprov_ea.ipynb  optprov_estimator.ipynb  optprov_mq.ipynb  optprov_order_statistics.ipynb  optprov_peer_id_analysis.ipynb  optprov_peer_state.ipynb  optprov_sim_estimator.ipynb  optprov_statistical_analysis.ipynb  optprov_theory.ipynb  order_statistic_mean.ipynb  order_statistics.ipynb  order_statistics_2.ipynb  parse.py  pyproject.toml  unreachable.logs  unreachable.logs.csv
jupyter/netsize-fit/: data.csv  data2.csv  go.mod  go.sum  main.go  netsize-fit.ipynb  netsize.logs  (+1 more)
(+1640 files in other folders)
