[tool.poetry]
name = "tenma-analysis"
version = "0.1.0"
description = "Analysis scripts for tenma output"
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]

[tool.poetry.dependencies]
python = "3.9.7"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
seaborn = "^0.11.2"
numpy = "^1.21.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
